--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+.navbar{
+    background-color: rgb(1, 34, 23);
+}
 .nav-link{ 
-    color: aquamarine;
+    color: rgb(167, 255, 226);
     display: flex;
     flex-wrap: wrap;
     padding-left: 0;
@@ -9,8 +12,12 @@
     text-decoration: none;
     transition: .5s;
 }
+.container-fluid{
+    font-family: 'Patrick Hand', cursive;
+    letter-spacing: 1px;
+}
 .nav-link:hover{
-    color: rgb(97, 170, 146);
+    color: rgb(76, 93, 88);
 }
 #offcanvasDarkNavbar{
     width: 250px;
@@ -38,4 +45,77 @@ input{
 }
 #btn2:hover{
     background-color: rgb(32, 51, 45);
+}
+.container2{
+    background-image: url(1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+.container3{
+    color: rgb(231, 246, 241);
+    margin-left: 10%;
+    margin-bottom: 5%;
+}
+#signup{
+    
+}
+p{
+    text-align: justify;
+}
+.btn3{
+    background-color: rgb(178, 255, 229);
+    color: rgb(2, 39, 27);
+    padding: 6px 30px;
+    font-family: 'Patrick Hand', cursive;
+    margin-top: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .5s;
+}
+.btn3:hover{
+    background-color: transparent;
+    color: rgb(183, 255, 231);
+}
+.container3 h2{
+    font-family: 'Fredericka the Great', cursive;
+}
+#grid{
+    color: rgb(231, 246, 241);
+    padding: 10px 0;
+    margin-top: 30px;
+}
+span{
+    font-size: larger;
+    color: rgb(0, 215, 143);
+}
+footer{
+    background-color: rgb(14, 26, 22);
+    padding: 20px;
+}
+#icn2{
+    align-items: center;
+    margin-top: 5px;
+    display: flex;
+    size: 40px;
+}
+#icn3{
+    font-size: larger;
+}
+.nav-item2{
+    margin-top: 2px;
+}
+.col p{
+    color: white;
+}
+.row{
+    text-align: center;
+    padding-top: 15px;
+}
+#icons{
+    margin-left: 12%;
+    margin-top: 8%;
 }
