--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* ------------- Home Page ------------------------ */
+
 .navbar{
     background-color: rgb(1, 34, 23);
 }
@@ -58,10 +60,7 @@ input{
 .container3{
     color: rgb(231, 246, 241);
     margin-left: 10%;
-    margin-bottom: 5%;
-}
-#signup{
-    
+    margin-bottom: 4%;
 }
 p{
     text-align: justify;
@@ -86,12 +85,15 @@ p{
 #grid{
     color: rgb(231, 246, 241);
     padding: 10px 0;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 span{
     font-size: larger;
     color: rgb(0, 215, 143);
 }
+
+/* ------------------- Footer --------------------------- */
+
 footer{
     background-color: rgb(14, 26, 22);
     padding: 20px;
@@ -100,10 +102,10 @@ footer{
     align-items: center;
     margin-top: 5px;
     display: flex;
-    size: 40px;
+    size: 60px;
 }
 #icn3{
-    font-size: larger;
+    size: 60px;
 }
 .nav-item2{
     margin-top: 2px;
