--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ p{
     letter-spacing: 3px;
 }
 span{
-    font-size: large;
+    font-size: 15px;
     color: rgb(0, 215, 143);
 }
 #collage{
@@ -157,7 +157,40 @@ footer{
     text-align: left;
 }
 .footer-pages{
-    font-size: 13px;
+    font-size: 10px;
     text-align: left;
-    align-items: left;
+    align-items: center;
+}
+.form{
+    font-size: 10px;
+    size: 10px;
+    color: rgb(62, 85, 77);
+}
+.newsletter{
+    text-align: left;
+    font-family: 'Handlee', cursive;
+}
+.input2{
+    font-size: 10px;
+}
+.btn4{
+    background-color: rgb(178, 255, 229);
+    color: rgb(2, 39, 27);
+    padding: 6px 10px;
+    font-size: 10px;
+    margin-top: 3px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .5s;
+}
+.btn4:hover{
+    background-color: transparent;
+    color: rgb(183, 255, 231);
+}
+.head-newsletter{
+    color: aquamarine;
+    font-family: 'Fredericka the Great', cursive;
+    text-align: left;
+    font-size: 12px;
+    margin-top: 15px;
 }
