--- a/css/style-sign-up.css
+++ b/css/style-sign-up.css
@@ -1,5 +1,9 @@
 /* ------------- Home Page ------------------------ */
 
+.html{
+    scroll-behavior: smooth;
+}
+
 .navbar{
     background-color: rgb(1, 34, 23);
 }
@@ -117,11 +121,19 @@ span{
 /* -------- Log in --------------- */
 
 .log-in{
-    background-color: rgb(5, 123, 84);
+    background-color: rgb(49, 98, 81);
     color: rgb(241, 255, 250);
-    padding: 20px;
+    padding: 10px 20px;
     text-align: left;
-    align-items: left;
+    align-items: center;
+}
+.log-in form{
+    text-align: left;
+    align-items: center;
+}
+.log-in input{
+    align-items: center;
+    background-color: rgb(190, 230, 216);
 }
 .form-label{
     align-items: left;
@@ -130,18 +142,47 @@ span{
 .btn5{
     background-color: rgb(178, 255, 229);
     color: rgb(2, 39, 27);
-    padding: 6px 30px;
-    font-family: 'Julee', cursive;
+    padding: 6px 10px;
+    size: 10px;
+    font-family: 'Fredericka the Great', cursive;
     align-items: left;
     letter-spacing: 2px;
     margin-top: 20px;
-    border-radius: 10px;
+    border-radius: 8px;
     cursor: pointer;
     transition: .5s;
 }
 .btn5:hover{
     background-color: transparent;
     color: rgb(34, 55, 48);
+}
+.card2{
+    background-color: rgb(49, 98, 81);
+    color: rgb(213, 243, 233);
+    text-align: left;
+    font-family: 'Shadows Into Light', cursive;
+    padding: 30px;
+}
+#forgot{
+    color: rgb(25, 255, 178);
+    margin-top: 10px;
+    margin-left: 2px;
+    transition: 0.5s;
+}
+#forgot:hover{
+   color: rgb(235, 247, 243);
+}
+.card-title2{
+    color: rgb(255, 255, 255);
+    text-align: left;
+    font-family: 'Fredericka the Great', cursive;
+    font-size: 25px;
+}
+.form-check-input{
+    color: rgb(12, 75, 54);
+}
+.sign-up-pp{
+    color: rgb(244, 255, 251);
 }
 
 
