--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 /* ------------- Home Page ------------------------ */
 
+.html{
+    scroll-behavior: smooth;
+}
+
 .navbar{
     background-color: rgb(1, 34, 23);
 }
@@ -109,9 +113,22 @@ span{
 }
 .intro{
     font-size: 15px;
+    text-align: center;
+    align-items: center;
 }
 #icons{
     font-size: 10px;
+}
+#clients{
+    text-align: center;
+    align-items: center;
+}
+.row1{
+    text-align: center;
+    align-items: center;
+}
+#intro{
+    font-size: 25px;
 }
 
 /* --------------  Featured -------------------------- */
@@ -136,7 +153,7 @@ span{
     transition: .5s;
 }
 .card:hover{
-    transform: translateY(-20px);
+    transform: translateY(-5px);
 }
 .card-title{
     color: rgb(239, 253, 248);
@@ -180,7 +197,7 @@ footer{
     font-size: 10px;
 }
 .row{
-    text-align: center;
+    text-align: left;
     padding-top: 15px;
 }
 #icons{
@@ -191,20 +208,20 @@ footer{
     font-size: small;
 }
 .social-link{
-    font-size: 10px;
+    font-size: 15px;
     text-align: left;
 }
 .footer-pages{
-    font-size: 10px;
+    font-size: 15px;
     text-align: left;
-    align-items: center;
+    align-items: left;
 }
 .footer-links{
-    font-size: 10px;
+    font-size: 15px;
 }
 .form{
-    font-size: 10px;
-    size: 10px;
+    font-size: 12px;
+    size: 15px;
     color: rgb(62, 85, 77);
     margin-top: 2px;
 }
@@ -213,13 +230,13 @@ footer{
     font-family: 'Handlee', cursive;
 }
 .input2{
-    font-size: 10px;
+    font-size: 12px;
 }
 .btn4{
     background-color: rgb(178, 255, 229);
     color: rgb(2, 39, 27);
-    padding: 6px 10px;
-    font-size: 10px;
+    padding: 6px 8px;
+    font-size: 12px;
     margin-top: 3px;
     border-radius: 5px;
     cursor: pointer;
@@ -233,11 +250,11 @@ footer{
     color: aquamarine;
     font-family: 'Fredericka the Great', cursive;
     text-align: left;
-    font-size: 12px;
+    font-size: 17px;
     margin-top: 15px;
     letter-spacing: 2px;
 }
 .footer-elements{
     color: rgb(224, 255, 245);
-    font-size: 10px;
+    font-size: 12px;
 }
