--- a/css/style-sign-up.css
+++ b/css/style-sign-up.css
@@ -19,7 +19,7 @@
     transition: .5s;
 }
 .container-fluid{
-    font-family: 'Julee', cursive;
+    font-family: 'Quicksand', sans-serif;
     letter-spacing: 2px;
 }
 .nav-link:hover{
@@ -69,7 +69,7 @@ input{
     background-color: rgb(178, 255, 229);
     color: rgb(2, 39, 27);
     padding: 6px 30px;
-    font-family: 'Julee', cursive;
+    font-family: 'Quicksand', sans-serif;
     letter-spacing: 2px;
     margin-top: 20px;
     border-radius: 10px;
@@ -160,7 +160,7 @@ span{
     background-color: rgb(49, 98, 81);
     color: rgb(213, 243, 233);
     text-align: left;
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Quicksand', sans-serif;
     padding: 30px;
 }
 #forgot{
@@ -239,7 +239,7 @@ footer{
 }
 .newsletter{
     text-align: left;
-    font-family: 'Handlee', cursive;
+    font-family: 'Quicksand', sans-serif;
 }
 .input2{
     font-size: 10px;
