--- a/css/style-shop.css
+++ b/css/style-shop.css
@@ -132,7 +132,31 @@ span{
 
 /* -------------------------- Shop ---------------------------- */
 
-
+.body{
+    background: rgb(74, 104, 94);
+    display: flex;
+}
+.navbar2{
+    max-width: 400px;
+    width: 100%;
+}
+.box .search-box{
+    position: relative;
+    height: 50px;
+    max-width: 380px;
+    margin: auto;
+}
+.search-box input{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    border-radius: 25px;
+    background: rgb(208, 247, 234);
+    outline: none;
+    border: none;
+    padding-left: 20px;
+    font-size: 18px;
+}
 
 
 
