--- a/css/style-shop.css
+++ b/css/style-shop.css
@@ -130,37 +130,46 @@ span{
     font-size: 25px;
 }
 
-/* -------------------------- Shop ---------------------------- */
+/* --------------  Featured -------------------------- */
 
-.body{
-    background: rgb(74, 104, 94);
-    display: flex;
+.featured{
+    background-color: rgb(54, 75, 68);
+    color: rgb(208, 243, 231);
+    padding: 25px;
 }
-.navbar2{
-    max-width: 400px;
-    width: 100%;
+.testimonial-view-all{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
 }
-.box .search-box{
-    position: relative;
-    height: 50px;
-    max-width: 380px;
-    margin: auto;
+.testimonial{
+    color: rgb(222, 247, 239);
+    font-family: 'Fredericka the Great', cursive;
 }
-.search-box input{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    border-radius: 25px;
-    background: rgb(208, 247, 234);
-    outline: none;
-    border: none;
-    padding-left: 20px;
-    font-size: 18px;
+.card{
+    background-color: rgb(26, 46, 39);
+    transition: .5s;
 }
-
-
-
-
+.card:hover{
+    transform: translateY(-5px);
+}
+.card-title{
+    color: rgb(239, 253, 248);
+    font-family: 'Fredericka the Great', cursive;
+}
+h5{
+    font-size: 20px;
+}
+small{
+    color: rgb(229, 250, 243);
+    font-family: 'Fredericka the Great', cursive;
+}
+.card-text{
+    font-family: 'Quicksand', sans-serif;
+    font-size: 10px;
+    color: rgb(227, 242, 237);
+}
 
 
 
