--- a/css/style-faqs.css
+++ b/css/style-faqs.css
@@ -130,128 +130,8 @@ span{
     font-size: 25px;
 }
 
+/*  ------- Frequently Ask Questions ------------- */
 
-/* ---------- Catergories ----------- */
-
-.h1{
-    font-family: 'Fredericka the Great', cursive;
-    color: rgb(209, 255, 240);
-    letter-spacing: 2px;
-    text-align: center;
-    background-color: rgb(49, 92, 78);
-    padding: 10px;
-    margin: 0;
-}
-.para{
-    margin: 0;
-    padding: 10px;
-    background-color: rgb(66, 116, 100);
-    text-align: center;
-    color: rgb(230, 255, 247);
-}
-.categories{
-    background-color: rgb(48, 94, 78);
-    color: rgb(216, 255, 242);
-    padding: 30px;
-}
-.category-h4{
-    font-family: 'Fredericka the Great', cursive;
-}
-.category-images{
-    border-radius: 200px;
-}
-.h5-label{
-    text-align: center;
-    margin-top: 20px;
-    padding-bottom: 30px;
-}
-.card3{
-    background-color: rgb(51, 106, 87);
-}
-.category-link{
-    text-decoration: none;
-    cursor: pointer;
-    transition: 0.5s;
-}
-.category-link:hover{
-    transform: translateY(-5px);
-}
-.card3{
-    border-radius: 10px;
-}
-
-
-
-/* --------------  Featured -------------------------- */
-
-.featured{
-    background-color: rgb(49, 92, 78);
-    color: rgb(208, 243, 231);
-    padding: 25px;
-}
-.testimonial-view-all{
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-}
-.testimonial{
-    color: rgb(222, 247, 239);
-    font-family: 'Fredericka the Great', cursive;
-}
-.card{
-    background-color: rgb(26, 46, 39);
-    transition: .5s;
-}
-.card:hover{
-    transform: translateY(-5px);
-}
-.card-title{
-    color: rgb(239, 253, 248);
-    font-family: 'Fredericka the Great', cursive;
-}
-h5{
-    font-size: 15px;
-}
-small{
-    color: rgb(229, 250, 243);
-    font-family: 'Fredericka the Great', cursive;
-}
-.card-text{
-    font-family: 'Quicksand', sans-serif;
-    font-size: 10px;
-    color: rgb(227, 242, 237);
-}
-.card2{
-    background-color: rgb(0, 222, 148);
-}
-
-/* ------- Bottom Info --------*/
-
-
-.text-center{
-    padding-top: 30px;
-    padding-bottom: 20px;
-}
-.text-center h4{
-    font-family: 'Fredericka the Great', cursive;
-    font-size: 25px;
-    color: rgb(217, 255, 242);
-}
-.text-center a{
-    color: rgb(151, 255, 220);
-}
-.text-center p{
-    color: rgb(217, 255, 242);
-}
-.text-center h5{
-    font-family: 'Fredericka the Great', cursive;
-    font-size: 15px;
-    color: rgb(229, 255, 246);
-}
-.bottom{
-    background-color: rgb(48, 94, 78);
-}
 
 
 
